Add quiz results page with archetype analytics and story recommendations

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prisma": "^6.9.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   },
   "prisma": {
